--- a/Practica 1.html
+++ b/Practica 1.html
@@ -5,7 +5,7 @@
     <title> Noticia Iphone 12</title>
 </head>
 <body>
-<h1 style="text-align: center;" style="font-family: Impact (sans-serif);">Prohibición de la venta del Iphone 12 en Francia</h1>
+<h1 style="text-align: center;">Prohibición de la venta del Iphone 12 en Francia</h1>
 <h2 style="text-align: center;">Francia prohíbe la venta del iPhone 12 por emisiones potentes de ondas</h2>
 <p> Francia prohíbe la venta del iPhone 12 por emisiones potentes de ondas
 
