Commit abans entrega

--- a/taules.html
+++ b/taules.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>taules</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<h1 style="text-align:center">Prohibició de la venta del Iphone 12</h1>
-<table border="1" style="text-align:center;margin:0 auto">
-    <caption style="text-align:center">Número de persones afectades per pais</caption>
+<h1 >Prohibició de la venta del Iphone 12</h1>
+<table>
+    <caption>Número de persones afectades per pais</caption>
     <tr>
         <th>Pais</th>
         <th>Número d'habitants</th>
