--- a/Practica 1.html
+++ b/Practica 1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title> Noticia Iphone 12</title>
     <link rel="taules" href="taules.html">
+    <link rel="formulari" href="formuali.html">
 </head>
 <body>
 <h1 style="color:red;text-align:center;">Prohibición de la venta del Iphone 12 en Francia</h1>
@@ -48,6 +49,7 @@
 </ol>
 
 <a href="taules.html"> Taules</a>
+<a href="formulari.html"> Formulari</a>
 
 </body>
 </html>
