--- a/formulari.html
+++ b/formulari.html
@@ -5,6 +5,15 @@
     <title>Formulari</title>
 </head>
 <body>
+<form>
+    <label for="nombre">Nombre: </label>
+    <input type="text" id="nombre" name="nombre"><br><br>
+    <label for="email">Email: </label>
+    <input type="email" id="email" name="email">
+    <label type="number">Numero de telèfon: </label>
+    <input type="number" id="numeroTelefono" name="number">
+
+</form>
 
 </body>
 </html>
