--- a/formulari.html
+++ b/formulari.html
@@ -10,8 +10,13 @@
     <input type="text" id="nombre" name="nombre"><br><br>
     <label for="email">Email: </label>
     <input type="email" id="email" name="email">
-    <label type="number">Numero de telèfon: </label>
-    <input type="number" id="numeroTelefono" name="number">
+    <label for="numero">Número:</label>
+    <input type="number" id="numero" name="numero" min="0" max="100">
+    <label for="lista">Escoge una opción:</label>
+    <select name="lista" id="lista">
+        <option value="elemento 1">Elemento 1</option>
+        <option value="elemento 2">Elemento 2</option>
+    </select>
 
 </form>
 
