--- a/formulari_enviat.html
+++ b/formulari_enviat.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styleForm.css">
     <title>Formulari enviat</title>
 </head>
 <body>
+
+<h1>El formulari s'ha enviat correctament</h1>
+
+<button id="retorn" onclick="location.href='formulari.html'">Retornar a la pàgina</button>
 
 </body>
 </html>
