--- a/formulari.html
+++ b/formulari.html
@@ -42,16 +42,16 @@
     </div>
     <br>
     <br>
-    <label id="preguntaGeneral">Comprarias el Iphone 12 despues de leer esta noticia</label>
-    <div>
+    <label for="preguntaGeneral">Comprarias el Iphone 12 despues de leer esta noticia</label>
+    <div id="preguntaGeneral">
         <label for="pregunta1">No</label>
-        <input id="pregunta1" type="radio">
+        <input name="grupRadio" id="pregunta1" type="radio">
         <br>
         <label for="pregunta2">Si</label>
-        <input id="pregunta2" type="radio" checked>
+        <input name="grupRadio" id="pregunta2" type="radio" checked>
         <br>
         <label for="pregunta3">Ya lo tengo</label>
-        <input id="pregunta3" type="radio">
+        <input name="grupRadio" id="pregunta3" type="radio">
     </div>
     <br>
     <br>
