--- a/formulari.html
+++ b/formulari.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <h1>Formulari</h1>
+<!--Comencem a programar el formulari-->
 <form action="formulari_enviat.html">
+<!--    Aqui li indiquem la acció que ha de fer el bottó "enviar"-->
     <label for="formNombre">Nombre:</label>
     <input class="textbox" id="formNombre" type="text" required>
     <br>
