--- a/formulari.html
+++ b/formulari.html
@@ -64,7 +64,7 @@
     <br>
     <br>
 
-    <input id="btnEnviar" type="submit" value="enviar">
+    <input id="btnEnviar" type="submit" value="Enviar">
 
 <!--    <button id="btnEnviar" onclick="location.href='formulari_enviat.html'">Enviar</button>-->
 
