--- a/formulari.html
+++ b/formulari.html
@@ -19,7 +19,7 @@
     <input class="textbox" type="email" id="formEmail" required>
     <br>
     <br>
-    <label for="formNumero" class="tituloLabel">Número:</label>
+    <label for="formNumero" class="tituloLabel">Cuantas personas conoces que tienes el Iphone 12?:</label>
     <input type="number" id="formNumero" name="numero" min="0" max="100" required>
     <br>
     <br>
@@ -45,7 +45,7 @@
     <br>
     <br>
 <!--    Aqui lo que hacemos es una lista de tres opciones que una de ellas és la respuesta a la pregunta. -->
-    <label for="formPregunta1" class="tituloLabel">Comprarias el Iphone 12 despues de leer esta noticia</label>
+    <label for="formPregunta1" class="tituloLabel">Comprarias el Iphone 12 despues de leer esta noticia?</label>
     <div id="formPregunta1">
         <label for="pregunta1">Si</label>
         <input name="grupRadio" id="pregunta1" type="radio">
