--- a/taules.html
+++ b/taules.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Prohibició de la venta del Iphone 12</h1>
-<table>
+<table class="taula">
     <caption>Número de persones afectades per pais</caption>
     <tr>
         <th>Pais</th>
