--- a/Practica 1.html
+++ b/Practica 1.html
@@ -5,9 +5,16 @@
     <title> Noticia Iphone 12</title>
     <link rel="taules" href="taules.html">
     <link rel="formulari" href="formuali.html">
+    <link rel="stylesheet" href="styleHome.css">
 </head>
 <body>
-<h1 style="color:red;text-align:center;">Prohibición de la venta del Iphone 12 en Francia</h1>
+<header class="headerNoticia">
+<h1 id="ttlHeader">Prohibición de la venta del Iphone 12 en Francia</h1>
+    <nav class="navHeader">
+        <a id="linkTaules" href="taules.html">Taules</a>
+        <a id="linkFormulari" href="formulari.html">Formulari</a>
+    </nav>
+</header>
 <h2 style="text-align:center;background-color:yellow">Francia prohíbe la venta del iPhone 12 por emisiones potentes de
     ondas</h2>
 <p> Francia prohíbe la venta del iPhone 12 por emisiones potentes de ondas
@@ -48,8 +55,6 @@
         Español</a></li>
 </ol>
 
-<a href="taules.html"> Taules</a>
-<a href="formulari.html"> Formulari</a>
 
 </body>
 </html>
